Update auf Spring-Boot 4 und Testcontainers 2