@@ -23,16 +23,16 @@ import gdv.xport.satz.Datensatz;
 import org.apache.commons.io.FileUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.hamcrest.MatcherAssert;
-import org.junit.BeforeClass;
-import org.junit.Ignore;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.StringWriter;
 import java.nio.charset.StandardCharsets;
 
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.startsWith;
 
@@ -51,7 +51,7 @@ public final class JsonFormatterTest extends AbstractFormatterTest {
         return new JsonFormatter();
     }
 
-    @BeforeClass
+    @BeforeAll
     public static void setUpTargetDir() {
         if (!TARGET_DIR.exists() && TARGET_DIR.mkdirs()) {
             LOG.info("Verzeichnis '{}' wurde angelegt.", TARGET_DIR);
@@ -69,7 +69,7 @@ public final class JsonFormatterTest extends AbstractFormatterTest {
     }
 
     @Test
-    @Ignore // dauert zu lang (ca. 4 Sek.)
+    @Disabled // dauert zu lang (ca. 4 Sek.)
     public void testWriteCompleteDatenpaket() throws IOException {
         Datenpaket complete = SatzRegistry.getInstance().getAllSupportedSaetze();
         checkWrite(complete);
@@ -86,13 +86,13 @@ public final class JsonFormatterTest extends AbstractFormatterTest {
         adressteil.setFeld(Bezeichner.NAME1, "James");
         adressteil.setFeld(Bezeichner.NAME3, "Bond");
         String json = checkWrite(datenpaket);
-        MatcherAssert.assertThat(json, containsString("MI6"));
-        MatcherAssert.assertThat(json, containsString("James"));
-        MatcherAssert.assertThat(json, containsString("Bond"));
+        assertThat(json, containsString("MI6"));
+        assertThat(json, containsString("James"));
+        assertThat(json, containsString("Bond"));
     }
 
     private String checkWrite(Datenpaket datenpaket) throws IOException {
-        File exportFile = new File(TARGET_DIR, String.format("datenpaket%03d.json", datenpaket.getDatensaetze().size()));
+        File exportFile = new File(TARGET_DIR, "datenpaket%03d.json".formatted(datenpaket.getDatensaetze().size()));
         try (StringWriter swriter = new StringWriter()) {
             JsonFormatter formatter = new JsonFormatter(swriter);
             formatter.write(datenpaket);
@@ -100,7 +100,7 @@ public final class JsonFormatterTest extends AbstractFormatterTest {
             String jsonString = swriter.toString().trim();
             FileUtils.writeStringToFile(exportFile, jsonString, StandardCharsets.UTF_8);
             LOG.info("{} wurde zur manuellen Pruefung in '{}' abgelegt", datenpaket, exportFile);
-            MatcherAssert.assertThat(jsonString, startsWith("{"));
+            assertThat(jsonString, startsWith("{"));
             LOG.info("{} wurde nach JSON formatiert.", datenpaket);
             return jsonString;
         }
